--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d out"
+    "predeploy": "next build",
+    "deploy": "next build && next export && touch ./out/.nojekyll && gh-pages -d out -t true"
   },
   "dependencies": {
     "gh-pages": "^6.2.0",
