--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "export": "next export",
-    "predeploy": "next build && next export && touch out/.nojekyll",
+    "predeploy": "next build && touch out/.nojekyll",
     "deploy": "gh-pages -t true -b master -d out"
   },
   "dependencies": {
