--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fakhridanishmp.github.io",
   "version": "0.1.0",
-  "homepage": "https://fakhridanishmp.github.io/fakhridanishmp.github.io",
+  "homepage": "https://fakhridanishmp.github.io/",
   "private": true,
   "scripts": {
     "dev": "next dev",
